--- a/stats_for_applications/README
+++ b/stats_for_applications/README
@@ -1,2 +1,4 @@
 
+[View some notes with code](https://htmlpreview.github.io/?https://raw.githubusercontent.com/hans-elliott99/stats/main/stats_for_applications/R/index.html)
+
 
