--- a/stats_for_applications/README
+++ b/stats_for_applications/README
@@ -1,4 +1,5 @@
 
-[View some notes with code](https://htmlpreview.github.io/?https://raw.githubusercontent.com/hans-elliott99/stats/main/stats_for_applications/R/index.html)
-
+Notes based on Stats for Applications:
+[MIT 18.650 Statistics for Applications](https://ocw.mit.edu/courses/18-650-statistics-for-applications-fall-2016/)  
+By Prof. Philippe Rigollet  
 
